refactor(reaction): link reactions to memo IDs (#6221)
